# deep-learning-traffic-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/code/: __init__.py
src/mobility/: Dockerfile  docker-compose.yml  evaluate.py  models.py  preprocessing.py  train.py
src/mobility/models/: __init__.py  core.py  gnn_lstm.py  stgcn.py  train_and_compare.py
src/mobility/pipeline/: consumer.py  error_messages.py  producer.py
src/mobility/schemas/: traffic.py  validation.py
src/mobility/utils/: generate_adj.py  graph.py
tests/: conftest.py  test_model.py  test_preprocessing.py  test_schemas.py  train_and_compare.py
