[project]
name = "mobility-traffic-prediction"
version = "0.1.0"
description = "Urban Traffic Prediction using STGCN and LSTM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric",
    "pandas",
    "numpy",
    "pydantic>=2.0.0",
    "aiokafka", # For asynchronous Kafka
    "influxdb-client",
    "h5py",
    "tables>=3.10.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Error, Flake, Isort

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]   # <--- CHANGE THIS BACK TO "src"
